--- a/app/src/main/res/layout/term_activity.xml
+++ b/app/src/main/res/layout/term_activity.xml
@@ -11,17 +11,14 @@
 
     <TextView
         android:id="@+id/termTitleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/termTitleEditText"
-        android:layout_alignEnd="@+id/termStartTextView"
+        android:layout_width="@dimen/control_width_96"
+        android:layout_height="@dimen/control_height_48"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/termStartTextView"
         android:gravity="end|center_vertical"
         android:text="@string/termTitleTextView_text"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_size_18" />
 
     <EditText
         android:id="@+id/termTitleEditText"
@@ -32,70 +29,83 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/termTitleTextView"
         android:layout_toRightOf="@+id/termTitleTextView"
-        android:ems="10"
         android:hint="@string/enter_a_new_term_title"
-        android:inputType="textCapWords" />
+        android:inputType="textCapWords"
+        android:layout_alignBottom="@+id/termTitleTextView" />
 
     <EditText
         android:id="@+id/termStartEditText"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/control_height_48"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/termTitleEditText"
         android:layout_toEndOf="@+id/termTitleTextView"
         android:layout_toRightOf="@+id/termTitleTextView"
-        android:ems="10"
         android:focusable="false"
-        android:hint="@string/start_date_hint" />
+        android:hint="@string/start_date_hint"
+        android:layout_alignBottom="@+id/termStartTextView" />
 
     <EditText
         android:id="@+id/termEndEditText"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/control_height_48"
-        android:layout_alignLeft="@+id/termStartEditText"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignStart="@+id/termStartEditText"
         android:layout_below="@+id/termStartEditText"
-        android:ems="10"
         android:focusable="false"
-        android:hint="@string/end_date_hint" />
+        android:hint="@string/end_date_hint"
+        android:layout_alignBottom="@+id/termEndTextView"
+        android:layout_toEndOf="@+id/termEndTextView"
+        android:layout_toRightOf="@+id/termEndTextView" />
 
     <TextView
         android:id="@+id/termStartTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/termEndEditText"
+        android:layout_height="@dimen/control_height_48"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/termTitleTextView"
         android:gravity="end|center_vertical"
         android:text="@string/termStartDateTextView_text"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_size_18"
+        android:layout_alignEnd="@+id/termTitleTextView"
+        android:layout_alignRight="@+id/termTitleTextView" />
 
     <TextView
         android:id="@+id/termEndTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/termEndEditText"
+        android:layout_height="@dimen/control_height_48"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/termStartEditText"
-        android:layout_toLeftOf="@+id/termStartEditText"
-        android:layout_toStartOf="@+id/termStartEditText"
+        android:layout_below="@+id/termStartTextView"
         android:gravity="end|center_vertical"
         android:text="@string/termEndDateTextView_text"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_size_18"
+        android:layout_alignEnd="@+id/termStartTextView"
+        android:layout_alignRight="@+id/termStartTextView" />
 
-    <Button
-        android:id="@+id/courseListButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/termEndEditText"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:onClick="openCourseList"
-        android:text="@string/course_list_button_text" />
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal"
+        style="?android:attr/buttonBarStyle">
 
+        <Button
+            android:id="@+id/courseListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="openCourseList"
+            android:text="@string/course_list_button_text"
+            android:textSize="@dimen/text_size_18"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
 </RelativeLayout>
