--- a/app/src/main/res/layout/course_list_activity.xml
+++ b/app/src/main/res/layout/course_list_activity.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.wgu.MentorListActivity">
+    tools:context="com.example.wgu.CourseListActivity">
 
-    <include layout="@layout/content_course_list" />
+    <include layout="@layout/course_list_content" />
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
