--- a/app/src/main/res/layout/term_list_content.xml
+++ b/app/src/main/res/layout/term_list_content.xml
@@ -9,8 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.wgu.CourseListActivity"
-    tools:showIn="@layout/activity_course_list">
+    tools:context="com.example.wgu.TermListActivity"
+    tools:showIn="@layout/term_list_activity">
 
     <ListView
         android:id="@+id/android:list"
