--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="control_height_48">48dp</dimen>
     <dimen name="control_width_96">96dp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
 </resources>
