--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -111,35 +111,35 @@
         android:layout_toRightOf="@+id/courseStatusTextView" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_centerHorizontal="true"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        style="?android:attr/buttonBarStyle">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/assessmentListButton"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openAssessmentList"
             android:text="@string/assessment_list_button_text"
-            android:textSize="@dimen/text_size_18"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:textSize="@dimen/text_size_18" />
 
         <Button
             android:id="@+id/mentorListButton"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openMentorList"
             android:text="@string/mentor_list_button_text"
-            android:textSize="@dimen/text_size_18"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:textSize="@dimen/text_size_18" />
 
 
     </LinearLayout>
