--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -13,18 +13,18 @@
     tools:showIn="@layout/main_activity">
 
     <TextView
-        android:text="Welcome to the WGU student application."
+        android:id="@+id/mainWelcomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:id="@+id/textView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp"
         android:gravity="center_vertical|center_horizontal"
+        android:text="@string/welcome_to_the_wgu_student_application"
         android:textSize="30sp" />
 
     <ListView
@@ -33,26 +33,26 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_centerHorizontal="true"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        style="?android:attr/buttonBarStyle">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/termListButton"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openTermList"
             android:text="@string/term_list_button_text"
-            android:textSize="@dimen/text_size_18"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:textSize="@dimen/text_size_18" />
 
     </LinearLayout>
 
