--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -22,15 +22,35 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="24dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/welcome_to_the_wgu_student_application"
         android:textSize="30sp" />
 
+    <TextView
+        android:id="@+id/mainAssessmentsDueTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/mainWelcomeTextView"
+        android:text="@string/no_assessments_due"
+        android:textSize="@dimen/text_size_18"
+        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal" />
+
     <ListView
         android:id="@+id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/mainAssessmentsDueTextView"
+        android:layout_marginBottom="56dp" />
 
     <LinearLayout
         style="?android:attr/buttonBarStyle"
