--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -42,7 +42,7 @@
         android:gravity="center_horizontal" />
 
     <ListView
-        android:id="@+id/android:list"
+        android:id="@+id/mainAssessmentsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
