--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/welcome_to_the_wgu_student_application"
+        android:text="@string/welcome_to_the_wgu_student_portal"
         android:textSize="30sp" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:text="@string/no_assessments_due"
         android:textSize="@dimen/text_size_18"
         android:layout_marginTop="24dp"
-        android:gravity="center_horizontal" />
+        android:gravity="start" />
 
     <ListView
         android:id="@+id/mainAssessmentsListView"
