--- a/app/src/main/res/layout/term_activity.xml
+++ b/app/src/main/res/layout/term_activity.xml
@@ -31,7 +31,8 @@
         android:layout_toEndOf="@+id/termTitleTextView"
         android:layout_toRightOf="@+id/termTitleTextView"
         android:hint="@string/enter_a_new_term_title"
-        android:inputType="textCapWords" />
+        android:inputType="textCapWords"
+        android:maxLines="1" />
 
     <EditText
         android:id="@+id/termStartEditText"
