--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:contentDescription="@string/term"
-        android:src="@drawable/ic_term" />
+        android:src="@drawable/ic_action_assessment" />
 
     <TextView
         android:id="@+id/mainAssessmentListTitleTextView"
