--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="control_height_48">48dp</dimen>
     <dimen name="control_width_96">96dp</dimen>
     <dimen name="text_size_18">18sp</dimen>
+    <dimen name="main_list_height">120dp</dimen>
 </resources>
