Changed the To Do config to a settings icon.

--- a/app/src/main/res/menu/menu_todo_config.xml
+++ b/app/src/main/res/menu/menu_todo_config.xml
@@ -4,7 +4,8 @@
     tools:context="com.example.wgu.TermListActivity">
     <item
         android:id="@+id/configure_todo_window"
+        android:icon="@drawable/ic_action_settings"
         android:orderInCategory="100"
         android:title="@string/configure_to_do"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
